[gd_scene load_steps=12 format=2]

[ext_resource path="res://Enemies/Blob/Blob.gd" type="Script" id=1]
[ext_resource path="res://HoverHealthBar/HoverHealthBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://SoftCollision/SoftCollision.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/Blob/blob.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="CircleShape2D" id=5]
radius = 16.3286

[sub_resource type="CircleShape2D" id=6]
radius = 8.0

[sub_resource type="CircleShape2D" id=7]
radius = 16.9765

[node name="Blob" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="HoverHealthBar" parent="." instance=ExtResource( 2 )]
offset = Vector2( 0, -20 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 4, 4 )
frames = SubResource( 4 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -1.66893e-06, 0 )
scale = Vector2( 2, 2 )
process_parent = true
physics_process_parent = true

[node name="SoftCollision" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 6 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 7 )

[node name="Attack" type="Timer" parent="."]
wait_time = 0.2
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="body_exited" from="HitBox" to="." method="_on_HitBox_body_exited"]
[connection signal="timeout" from="Attack" to="." method="_on_Attack_timeout"]

[editable path="SoftCollision"]
